working on sorting

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
   <body>
     <header>
       <h1>The Gallery of Horns</h1>
+      <h3 class="prev">Previous Page</h3>
       <select class="keyfilter">
         <option value="default">Filter by Keyword</option>
       </select>
+      <select class="sortoptions">
+        <option value="title">Sort by Title</option>
+        <option value="horns">Sort by Horns</option>
+      </select>
+      <h3 class="next">Next Page</h3>
     </header>
     <main>
       <section id="photo-template">
