--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/modules.css">
+    <script id="animal-template" type="text/x-handlebars-template">
+      <section class={{ title }}>
+        <h2>{{ title }}</h2>
+        <div>
+          <img src={{ image_url }} alt="">
+        </div>
+        <p>{{ description }}</p>
+      </section>
+    </script>
   </head>
   <body>
     <header>
       <h1>The Gallery of Horns</h1>
       <h3 class="prev">Previous Page</h3>
-      <select class="keyfilter">
-        <option value="default">Filter by Keyword</option>
-      </select>
+      <select class="keyfilter"></select>
       <select class="sortoptions">
         <option value="title">Sort by Title</option>
         <option value="horns">Sort by Horns</option>
@@ -25,7 +32,7 @@
     </header>
     <main>
       <section id="photo-template">
-        <h2></h2>
+        <h2></h2>l
         <div>
           <img src="" alt="">
         </div>
@@ -35,7 +42,9 @@
     <footer>
       &copy; 2018 Code Fellows
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/animaltemplate.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
