--- a/index.html
+++ b/index.html
@@ -22,23 +22,17 @@
   <body>
     <header>
       <h1>The Gallery of Horns</h1>
-      <h3 class="prev">Previous Page</h3>
       <select class="keyfilter"></select>
       <select class="sortoptions">
         <option value="title">Sort by Title</option>
         <option value="horns">Sort by Horns</option>
       </select>
-      <h3 class="next">Next Page</h3>
     </header>
-    <main>
-      <section id="photo-template">
-        <h2></h2>l
-        <div>
-          <img src="" alt="">
-        </div>
-        <p></p>
-      </section>
-    </main>
+    <div>
+      <h3 class="prev">Previous Page</h3>
+      <h3 class="next">Next Page</h3>
+    </div>
+    <main></main>
     <footer>
       &copy; 2018 Code Fellows
     </footer>
