corrected filter list duplication bug; updated styling; moved descriptions to tooltip

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <script id="animal-template" type="text/x-handlebars-template">
       <section class={{ title }}>
         <h2>{{ title }}</h2>
-        <div>
-          <img src={{ image_url }} alt="">
-        </div>
-        <p>{{ description }}</p>
+        <img src={{ image_url }} alt="image of {{ title }}" title="{{ description }}">
+        <!-- <p>{{ description }}</p> -->
       </section>
     </script>
   </head>
